--- a/question_2/src/index.css
+++ b/question_2/src/index.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-@import "tailwindcss/preflight";
 
 :root {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -8,21 +7,19 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color-scheme: light dark;
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+/*
 body {
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
     background-color: #f8fafc;
     color: #334155;
-}
+} */
 
 .card {
     @apply bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow duration-300;
